--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-streamlit
-langchain
-langchain-openai
-openai
+streamlit==1.31.0
+langchain==0.1.0
+langchain-openai==0.0.5
+langchain-core==0.1.23
+langchain-community==0.0.13
+openai==1.10.0
+pandas==2.1.4
+faiss-cpu==1.7.4
+tiktoken==0.5.2
