--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.31.0
-langchain==0.1.16
-langchain-openai==0.0.8
-langchain-core==0.1.42
-langchain-community==0.0.38
-openai==1.10.0
-pandas==2.1.4
-faiss-cpu==1.7.4
-tiktoken==0.5.2
+streamlit
+langchain
+langchain-openai
+langchain-core
+langchain-community
+openai
+pandas
+faiss-cpu
+tiktoken
